got webpack setup

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,10 @@
     "start": "node ./tools/server.js",
     "test": "node ./tools/run_test.js app",
     "test:app": "node ./tools/run_test.js app",
-    "test:cli": "node ./tools/run_test.js cli"
+    "test:cli": "node ./tools/run_test.js cli",
+    "webpack": "webpack",
+    "watch": "webpack --watch"
+
   },
   "babel": {
     "presets": [
