--- a/frontend/package.json
+++ b/frontend/package.json
@@ -75,6 +75,7 @@
     "babel-core": "^6.14.0",
     "babel-polyfill": "^6.13.0",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.1.1",
     "lodash": "^4.15.0",
     "memobind": "^0.5.0",
     "react": "^15.3.1",
