--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,6 @@
     "test:cli": "node ./tools/run_test.js cli",
     "webpack": "webpack",
     "watch": "webpack --watch"
-
   },
   "babel": {
     "presets": [
@@ -78,6 +77,7 @@
     "jquery": "^3.1.1",
     "lodash": "^4.15.0",
     "memobind": "^0.5.0",
+    "pubnub": "^4.4.3",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-hot-loader": "^3.0.0-beta.6",
