--- a/frontend/package.json
+++ b/frontend/package.json
@@ -73,6 +73,8 @@
   "dependencies": {
     "babel-core": "^6.14.0",
     "babel-polyfill": "^6.13.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "gsap": "^1.19.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.1.1",
     "lodash": "^4.15.0",
@@ -80,10 +82,12 @@
     "pubnub": "^4.4.3",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-gsap-enhancer": "^0.3.0",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.5",
+    "react-typist": "^1.0.3",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.1.0",
